Archive2/fd/9f3c98a6c20544/output
main.cpp:2:1: error: unknown type name 'string'
string portName = "testing:";
^
main.cpp:3:1: error: unknown type name 'RegistryKey'
RegistryKey PrinterPort = Registry.LocalMachine.OpenSubKey("SYSTEM\\ControlSet001\\Control\\Print\\Monitors\\Redirected Port\\Ports\\"+portName, true);
^
main.cpp:3:27: error: use of undeclared identifier 'Registry'
RegistryKey PrinterPort = Registry.LocalMachine.OpenSubKey("SYSTEM\\ControlSet001\\Control\\Print\\Monitors\\Redirected Port\\Ports\\"+portName, true);
                          ^
main.cpp:4:1: error: expected unqualified-id
if (PrinterPort != null)
^
4 errors generated.
